dev: animation hello section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,7 @@
 @import "_created_by";
 @import "_video";
 @import "_kickstarter";
+@import "_animation";
 
 @import "_about_page";
 @import "_privacy_page";
