--- a/src/scss/_hello.scss
+++ b/src/scss/_hello.scss
@@ -4,6 +4,10 @@
   padding: 158px 0 84px;
   min-height: 100vh;
   background-image: radial-gradient(circle at 50% 100%, rgba(158, 0, 255, 0.2), rgba(158, 0, 255, 0) 37%), linear-gradient(to bottom, #0a0a0a, #0a0a0a);
+  .name-container{
+    overflow: hidden;
+  }
+
   .name {
     display: flex;
     flex-wrap: nowrap;
