add mobile menu. Fix blocks size

--- a/src/scss/_about_page.scss
+++ b/src/scss/_about_page.scss
@@ -70,7 +70,7 @@
 #about__2-screen {
   padding: 24px 0;
   //background-color: #141414;
-  min-height: 100vh;
+  //min-height: 100vh;
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
@@ -154,7 +154,7 @@
 #about__3-screen {
   padding: 24px 0;
   //background-color: #141414;
-  min-height: 100vh;
+  //min-height: 100vh;
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
@@ -177,12 +177,14 @@
     display: flex;
     flex-direction: column;
     align-items: start;
-    justify-content: center;
+    justify-content: start;
     margin-left: 0;
     padding-bottom: 32px;
+    padding-top: 0;
     @media (min-width: 992px) {
       max-width: 400px;
       padding-bottom: 0;
+      padding-top: 96px;
     }
     .title {
       text-align: left;
@@ -237,7 +239,7 @@
 #about__4-screen {
   padding: 24px 0;
   //background-color: #141414;
-  min-height: 100vh;
+  //min-height: 100vh;
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
