--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -16,6 +16,8 @@
     align-items: center;
     justify-content: space-between;
     .logo {
+      position: relative;
+      z-index: 2;
       a {
         display: block;
         text-decoration: none;
