--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@
 @import "_ui";
 
 @import "_header";
+@import "_mobile_menu";
 
 @import "_hello";
 @import "_efficiently";
@@ -48,6 +49,11 @@ body{
   font-family: $main_font;
   background-color: #0a0a0a;
   color: $text-main-color;
+  &.lock {
+    @media (max-width: 991px) {
+      overflow: hidden;
+    }
+  }
   main {
     flex: 1 0 auto;
     padding: 0;
