--- a/src/scss/_key_features.scss
+++ b/src/scss/_key_features.scss
@@ -6,6 +6,7 @@
     flex-wrap: nowrap;
     align-items: center;
   }
+
   .title-mini {
     margin-bottom: 32px;
     padding-top: 0;
@@ -22,12 +23,16 @@
       width: auto;
       margin: 0;
     }
+
     .slick-list {
-      height: auto!important;
+      height: auto !important;
     }
+
     .slick-track {
-      height: auto!important;
+      transform: translate3d(0px, 0px, 0px) !important;
+      height: auto !important;
     }
+
     .slider-title {
       font-size: 32px;
       font-weight: bold;
@@ -40,12 +45,36 @@
       opacity: 0.5;
       transition: all $animation_speed;
       display: none;
+
       @media (min-width: 1200px) {
         display: block;
       }
+
       span {
-        border-bottom: 0 solid rgba(255, 255, 255, .4);
-        transition: all $animation_speed;
+        position: relative;
+        display: inline-flex;
+
+        &::before {
+          opacity: 0;
+          content: "";
+          position: absolute;
+          bottom: -5px;
+          left: 0;
+          width: 100%;
+          height: 2px;
+          background: rgba(255, 255, 255, .4);
+        }
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -5px;
+          left: 0;
+          width: 0%;
+          height: 2px;
+          background: rgba(255, 255, 255, 1);
+          z-index: 2;
+        }
       }
     }
 
@@ -61,11 +90,13 @@
         display: none;
         margin: 0;
       }
+
       img {
         width: 100%;
         height: 100%;
         object-fit: cover;
       }
+
       &:before {
         content: '';
         display: block;
@@ -104,31 +135,47 @@
   .slick-current {
     .slider-title {
       opacity: 1;
-      span {
-        border-width: 2px;
+
+
+      span::before {
+        opacity: 1;
+      }
+
+      span::after {
+        animation: lineSlide 8s linear forwards;
       }
     }
   }
 
   .slick-slide {
     border: 0;
+    overflow: hidden;
+
     .slider-title {
       padding: 13px 0;
     }
+
     .name {
+      position: relative;
       font-size: 24px;
       font-weight: bold;
       line-height: 1.5;
       color: #fff;
       margin-bottom: 24px;
+
+
       @media (min-width: 1200px) {
         display: none;
       }
+
       span {
         border-bottom: 1px solid rgba(255, 255, 255, .4);
         transition: all $animation_speed;
       }
+
+
     }
+
     .photo {
       position: relative;
 
@@ -137,15 +184,16 @@
       @media (min-width: 1200px) {
         height: 752px;
       }
+
       img,
       video {
-        width: 100%;
         @media (min-width: 1200px) {
           height: 100%;
           object-fit: cover;
         }
       }
     }
+
     .description {
       margin-top: 24px;
       @media (min-width: 768px) {
@@ -160,6 +208,7 @@
         justify-content: space-between;
         gap: 30px;
       }
+
       span {
         display: block;
         font-size: 16px;
@@ -185,5 +234,13 @@
     }
 
   }
+}
 
+@keyframes lineSlide {
+  0%{
+    width: 0%;
+  }
+  100%{
+    width: 100%;
+  }
 }
