--- a/src/scss/_key_features.scss
+++ b/src/scss/_key_features.scss
@@ -51,30 +51,8 @@
       }
 
       span {
-        position: relative;
-        display: inline-flex;
-
-        &::before {
-          opacity: 0;
-          content: "";
-          position: absolute;
-          bottom: -5px;
-          left: 0;
-          width: 100%;
-          height: 2px;
-          background: rgba(255, 255, 255, .4);
-        }
-
-        &::after {
-          content: "";
-          position: absolute;
-          bottom: -5px;
-          left: 0;
-          width: 0%;
-          height: 2px;
-          background: rgba(255, 255, 255, 1);
-          z-index: 2;
-        }
+        border-bottom: 0 solid rgba(255, 255, 255, .4);
+        transition: all $animation_speed;
       }
     }
 
@@ -136,13 +114,8 @@
     .slider-title {
       opacity: 1;
 
-
-      span::before {
-        opacity: 1;
-      }
-
-      span::after {
-        animation: lineSlide 8s linear forwards;
+      span {
+        border-width: 2px;
       }
     }
   }
@@ -157,20 +130,17 @@
     }
 
     .name {
-      position: relative;
-      font-size: 24px;
+      font-size: 32px;
       font-weight: bold;
-      line-height: 1.5;
-      color: #fff;
-      margin-bottom: 24px;
-
+      opacity: 0.5;
+      transition: all $animation_speed;
+      display: none;
 
       @media (min-width: 1200px) {
-        display: none;
+        display: block;
       }
-
       span {
-        border-bottom: 1px solid rgba(255, 255, 255, .4);
+        border-bottom: 0 solid rgba(255, 255, 255, .4);
         transition: all $animation_speed;
       }
 
@@ -234,14 +204,5 @@
       }
     }
 
-  }
-}
-
-@keyframes lineSlide {
-  0%{
-    width: 0%;
-  }
-  100%{
-    width: 100%;
   }
 }
