--- a/src/scss/_about_page.scss
+++ b/src/scss/_about_page.scss
@@ -68,14 +68,14 @@
 
 
 #about__2-screen {
-  padding: 24px 0;
+  padding: 24px 0 60px;
   //background-color: #141414;
   //min-height: 100vh;
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
   @media (min-width: 992px) {
-
+    padding: 24px 0;
   }
 
   .photo {
@@ -103,9 +103,7 @@
     }
     .title {
       text-align: left;
-      @media (min-width: 1200px) {
-        margin-bottom: 24px;
-      }
+      margin-bottom: 24px;
       h3 {
         font-size: 24px;
         @media (min-width: 1200px) {
@@ -152,19 +150,28 @@
 }
 
 #about__3-screen {
-  padding: 24px 0;
+  padding: 24px 0 60px;
   //background-color: #141414;
   //min-height: 100vh;
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
   @media (min-width: 992px) {
+    padding: 24px 0;
+  }
 
+  .row {
+    @media (max-width: 991px) {
+      flex-direction: column-reverse;
+    }
   }
 
   .photo {
     overflow: hidden;
     border-radius: 8px;
+    @media (max-width: 991px) {
+      margin-bottom: 32px;
+    }
     img {
       display: block;
       width: 100%;
@@ -179,16 +186,22 @@
     align-items: start;
     justify-content: start;
     margin-left: 0;
-    padding-bottom: 32px;
+    padding-bottom: 0;
     padding-top: 0;
     @media (min-width: 992px) {
       max-width: 400px;
       padding-bottom: 0;
       padding-top: 96px;
     }
+    @media (max-width: 991px) {
+      margin-bottom: 0;
+    }
     .title {
       text-align: left;
       @media (min-width: 1200px) {
+        margin-bottom: 24px;
+      }
+      @media (max-width: 991px) {
         margin-bottom: 24px;
       }
       h3 {
@@ -237,14 +250,39 @@
 }
 
 #about__4-screen {
-  padding: 24px 0;
+  padding: 24px 0 60px;
   //background-color: #141414;
   //min-height: 100vh;
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
   @media (min-width: 992px) {
+    padding: 24px 0;
+  }
 
+  .row {
+    & > div {
+      &:nth-child(1){
+        order: 0;
+      }
+      &:nth-child(2){
+        order: 2;
+      }
+      &:nth-child(3){
+        order: 1;
+      }
+      @media (min-width: 992px) {
+        &:nth-child(1){
+          order: 0;
+        }
+        &:nth-child(2){
+          order: 1;
+        }
+        &:nth-child(3){
+          order: 2;
+        }
+      }
+    }
   }
 
   .photo {
@@ -253,7 +291,7 @@
     img {
       display: block;
       width: 100%;
-      height: 400px;
+      height: 300px;
       object-fit: cover;
       @media (min-width: 992px) {
         height: auto;
@@ -269,15 +307,13 @@
     align-items: start;
     justify-content: center;
     margin-left: 0;
-    padding: 30px 0;
+    padding: 32px 0 0;
     @media (min-width: 992px) {
       padding: 0 36px;
     }
     .title {
       text-align: left;
-      @media (min-width: 1200px) {
-        margin-bottom: 24px;
-      }
+      margin-bottom: 24px;
       h3 {
         font-size: 24px;
         @media (min-width: 1200px) {
@@ -324,25 +360,43 @@
 }
 
 #about__5-screen {
-  padding: 24px 0;
-  .poster {
-    position: relative;
-    height: 738px;
-    background-image: url('/img/about_s-5.jpg');
-    background-size: cover;
-    background-position: left center;
+  padding: 24px 0 60px;
+  @media (min-width: 992px) {
+    padding: 24px 0;
+  }
+  .m_poster {
     border-radius: 8px;
     overflow: hidden;
+    margin-bottom: 24px;
+    @media (min-width: 768px) {
+      display: none;
+    }
+    img {
+      display: block;
+      width: 100%;
+    }
+  }
+
+  .poster {
+    position: relative;
+
+    @media (min-width: 768px) {
+      height: 738px;
+      background-image: url('/img/about_s-5.jpg');
+      background-size: cover;
+      background-position: left center;
+      border-radius: 8px;
+      overflow: hidden;
+    }
     .text-block {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 24px;
-      @media (min-width: 576px) {
+      @media (min-width: 768px) {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
         right: initial;
         width: 400px;
       }
