--- a/src/scss/_kickstarter.scss
+++ b/src/scss/_kickstarter.scss
@@ -66,10 +66,6 @@
           position: relative;
         }
       }
-      & form:invalid .button {
-        opacity: 0.5;
-        pointer-events: none;
-      }
     }
   }
 }
@@ -112,7 +108,10 @@
       img {
         display: block;
         transition: all $animation_speed;
-        max-width: 100%;
+        max-width: 180px;
+        @media (min-width: 992px) {
+          max-width: 100%;
+        }
         &.hovered {
           position: absolute;
           top: 0;
