--- a/src/scss/_mobile_menu.scss
+++ b/src/scss/_mobile_menu.scss
@@ -59,10 +59,12 @@
       left: 0;
       right: 0;
       height: 100vh;
+      height: var(--app-height);
       padding-top: 56px;
-      background: #0a0a0a;
+      background: #0a0a0acc;
       z-index: 1;
       transition: all $animation_speed;
+      backdrop-filter: blur(25px);
       &.active {
         opacity: 1;
         //top: 0;
