--- a/src/scss/_ui.scss
+++ b/src/scss/_ui.scss
@@ -38,13 +38,10 @@
 }
 
 .button-white-bordered {
+  width: 160px;
   position: relative;
-  display: flex;
-  flex-wrap: nowrap;
-  gap: 12px;
-  align-items: center;
   height: 40px;
-  padding: 0 23px;
+  padding: 0;
   border-radius: 24px;
   border: solid 1px $text-main-color;
   text-decoration: none;
@@ -52,37 +49,46 @@
   font-size: 16px;
   color: $text-main-color;
   overflow: hidden;
-  span {
-    position: relative;
-    z-index: 1;
-    margin-top: 2px;
-    mix-blend-mode: difference;
-  }
-  img {
-    position: relative;
-    z-index: 1;
-    display: block;
-    height: 16px;
-    mix-blend-mode: difference;
-  }
-
-  &:after {
-    content: '';
+  div {
     position: absolute;
-    top: 38px;
+    top: 0;
     left: 0;
-    display: block;
     width: 100%;
     height: 38px;
-    background-color: $text-main-color;
-    z-index: 0;
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 12px;
+    align-items: center;
+    padding: 0 23px;
     transition: all $animation_speed;
+    span {
+      position: relative;
+      z-index: 1;
+      margin-top: 2px;
+      mix-blend-mode: difference;
+    }
+    img {
+      position: relative;
+      z-index: 1;
+      display: block;
+      height: 16px;
+      mix-blend-mode: difference;
+    }
+
+    &.hover {
+      top: 40px;
+      background-color: $text-main-color;
+      z-index: 0;
+    }
   }
 
   @media (pointer: fine) {
     &:hover {
-      &:after {
-        top: 0;
+      div {
+        top: -40px;
+        &.hover {
+          top: 0;
+        }
       }
     }
   }
