--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,7 @@
 @import "_header";
 @import "_mobile_menu";
 
+@import "_404";
 @import "_hello";
 @import "_efficiently";
 @import "_key_features";
@@ -39,7 +40,9 @@
 }
 
 html {
-  height: 100%;
+  min-height: 100%;
+  min-width: 360px;
+  overflow-x: hidden;
 }
 
 body{
