--- a/src/scss/_ui.scss
+++ b/src/scss/_ui.scss
@@ -232,7 +232,7 @@
       }
     }
   }
-  .text {
+  &__text {
     padding-bottom: 32px;
     @media (min-width: 992px) {
       padding-bottom: 48px;
