--- a/src/scss/_no-touch.scss
+++ b/src/scss/_no-touch.scss
@@ -6,6 +6,7 @@
     transform: translateY(-50px);
   }
 
+  #hello .name .circle,
   #hello .name h1 .letter {
     clip-path: inset(100% 0px 0px);
   }
